# FS-PYTHON-Airbnb-Backend

./: db.sqlite3  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_experience_time_booking_guests.py  0003_alter_booking_guests.py  0004_alter_booking_guests.py  0005_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  (+1 more)
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+5 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  views.py
(+6 files in other folders)
